user-scripts/@modules/modules/general-custom-scrollbar/custom-scrollbar.css
/* Firefox */

@supports (scrollbar-width: thin) and (not selector(::-webkit-scrollbar)) {
  * {
    scrollbar-width: thin;
    scrollbar-color: #4262c2 #262e44;
  }
}


/* Webkit */
::-webkit-scrollbar,
::-webkit-scrollbar-thumb,
::-webkit-scrollbar-corner,
::-webkit-scrollbar-button {
  --scrollbar-width: 10px;
  --scrollbar-height: 5px;

  --thumb-color: #34373e;
  --thumb-hover-color: #23242b;
  --thumb-active-color: #14171b;
  --thumb-box-shadow-color: #969696;

  --track-bg-color: #0b1115;

  --corner-color: #6f6f6f;

  --button-width: 20px;
  --button-height: 20px;

  --button-color: #47484c;
  --button-hover-color: #585d6b;
  --button-active-color: #6a707f;
  --button-box-shadow-color: #bfbfbf;
}


::-webkit-scrollbar {
  width:  calc(var(--scrollbar-width, 10px) * var(--visual-viewport-zoom-ratio));
  height: calc(var(--scrollbar-height, 5px) * var(--visual-viewport-zoom-ratio));
  background-color: var(--track-bg-color, #0b1115);
  border-radius: calc(10px * var(--visual-viewport-zoom-ratio));
}

::-webkit-scrollbar-thumb {
  background-color: var(--thumb-color, #34373e);
  border-radius: calc(10px * var(--visual-viewport-zoom-ratio));
  box-shadow: inset var(--thumb-box-shadow-color, #969696) 0 0 calc(5px * var(--visual-viewport-zoom-ratio)) 0;
}

::-webkit-scrollbar-thumb:hover {
  background-color: var(--thumb-hover-color, #23242b);
}

::-webkit-scrollbar-thumb:active {
  background-color: var(--thumb-active-color, #969696);
}

/* Hide extra buttons that appear when parent is a flex or grid container */
::-webkit-scrollbar-button {
  width: 0;
  height: 0;
}

::-webkit-scrollbar-button:single-button {
  width: calc(var(--button-width, 20px) * var(--visual-viewport-zoom-ratio));
  height: calc(var(--button-height, 20px) * var(--visual-viewport-zoom-ratio));
  background-color: var(--button-color, #47484c);
  box-shadow: inset var(--button-box-shadow-color, #bfbfbf) 0 0 calc(5px * var(--visual-viewport-zoom-ratio)) 0;
}

::-webkit-scrollbar-button:hover {
  background-color: var(--button-hover-color, #585d6b);
}

::-webkit-scrollbar-button:active {
  background-color: var(--button-active-color, #6a707f);
}


::-webkit-scrollbar-button:vertical:single-button:increment {
  border-radius: calc(10px * var(--visual-viewport-zoom-ratio)) calc(10px * var(--visual-viewport-zoom-ratio)) 0 0;
}

::-webkit-scrollbar-button:vertical:single-button:decrement {
  border-radius: 0 0 calc(10px * var(--visual-viewport-zoom-ratio)) calc(10px * var(--visual-viewport-zoom-ratio));
}

::-webkit-scrollbar-button:horizontal:single-button:increment {
  border-radius: calc(10px * var(--visual-viewport-zoom-ratio)) 0 0 calc(10px * var(--visual-viewport-zoom-ratio));
}

::-webkit-scrollbar-button:horizontal:single-button:decrement {
  border-radius: 0 calc(10px * var(--visual-viewport-zoom-ratio)) calc(10px * var(--visual-viewport-zoom-ratio)) 0;
}

::-webkit-scrollbar-corner {
  background-color: var(--corner-color, #6f6f6f);
}

